--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_compile_options(-g -Wall -Wextra)
 include_directories(include ../libs/)
 link_directories(../libs)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../output)
-add_executable(ping_pong src/main.c src/glad.c src/shader_module.c src/texture_module.c src/stb_image.c)
+add_executable(ping_pong src/main.c src/glad.c src/shader_module.c src/texture_module.c src/stb_image.c src/linear_algebra.c)
 target_link_libraries (ping_pong PUBLIC glfw3 PUBLIC GL X11 pthread Xrandr dl m)# Xi dl m)
 
 
